--- a/src/components/ButtonComponent.css
+++ b/src/components/ButtonComponent.css
@@ -1,3 +1,39 @@
-.btn-estilos{
+/*.btn-estilos{
     margin-right: 15px;
+}*/
+.btn-estilos {
+    position: relative;
+    display: inline-block;
+    text-decoration: none;
+    color: #fff;
+    font-weight: 700;
+}
+
+.btn-estilos::before,
+.btn-estilos::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    background-color: #ff0000;
+    transform: scaleX(0);
+    transition: transform 0.25s;
+}
+
+.btn-estilos::before {
+    top: -3px;
+    transform-origin: left;
+}
+
+.btn-estilos::after {
+    bottom: -3px;
+    transform-origin: right;
+}
+
+.btn-estilos:hover::before,
+.btn-estilos:hover::after,
+.active::before,
+.active::after {
+    transform: scaleX(1);
 }
