--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -1,10 +1,51 @@
-.barra {
-    width: 100%;
-    background-color: #f8f9fa;
+.navbar {
+    background: rgba(255, 0, 0, 0.48);
+    background: linear-gradient(90deg, rgba(255, 0, 0, 0.48) 0%, rgba(0, 0, 0, 0.51) 50%, rgba(28, 0, 255, 0.59) 80%);
+    background: -webkit-linear-gradient(90deg, rgba(255, 0, 0, 0.48) 0%, rgba(0, 0, 0, 0.51) 50%, rgba(28, 0, 255, 0.59) 80%);
+    background: -moz-linear-gradient(90deg, rgba(255, 0, 0, 0.48) 0%, rgba(0, 0, 0, 0.51) 50%, rgba(28, 0, 255, 0.59) 80%);
 }
 
-.container {
-    display: flex;
+.div__list__estilo {
+    list-style: none;
     justify-content: space-between;
+    align-content: center;
     align-items: center;
+    gap: 40px;
+}
+
+.btn-estilos {
+    position: relative;
+    display: inline-block;
+    text-decoration: none;
+    color: #15a11c00;
+    font-weight: 700;
+}
+
+.btn-estilos::before,
+.btn-estilos::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    background-color: #ff0000;
+    transform: scaleX(0);
+    transition: transform 0.25s;
+}
+
+.btn-estilos::before {
+    top: -3px;
+    transform-origin: left;
+}
+
+.btn-estilos::after {
+    bottom: -3px;
+    transform-origin: right;
+}
+
+.btn-estilos:hover::before,
+.btn-estilos:hover::after,
+.active::before,
+.active::after {
+    transform: scaleX(1);
 }
