--- a/src/components/ButtonComponent.css
+++ b/src/components/ButtonComponent.css
@@ -1,39 +1,21 @@
-/*.btn-estilos{
-    margin-right: 15px;
-}*/
+.btn {
+  display: inline-block;
+  font-size: 1rem;
+  padding: 0.5rem 1rem;
+  text-align: center;
+  text-decoration: none;
+  border: 1px solid transparent;
+  border-radius: 4px;
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
 .btn-estilos {
-    position: relative;
-    display: inline-block;
-    text-decoration: none;
-    color: #fff;
-    font-weight: 700;
+  font-weight: 400;
+  background-color: #0056b3;
+  color: white;
 }
 
-.btn-estilos::before,
-.btn-estilos::after {
-    content: '';
-    position: absolute;
-    left: 0;
-    width: 100%;
-    height: 2px;
-    background-color: #ff0000;
-    transform: scaleX(0);
-    transition: transform 0.25s;
-}
-
-.btn-estilos::before {
-    top: -3px;
-    transform-origin: left;
-}
-
-.btn-estilos::after {
-    bottom: -3px;
-    transform-origin: right;
-}
-
-.btn-estilos:hover::before,
-.btn-estilos:hover::after,
-.active::before,
-.active::after {
-    transform: scaleX(1);
+.btn-estilos:hover {
+  background-color: #1a86fa;
+  color: #302f2d;
 }
